frs-banking/main/default/objects/Transfer_Completed__e/Transfer_Completed__e.object-meta.xml
<CustomObject>
    <description>Published (via platform-core PlatformEvents) when a Transfer__c completes. Subscribers update the ledger / notify. FR-5.</description>
    <label>Transfer Completed</label>
    <pluralLabel>Transfers Completed</pluralLabel>
</CustomObject>