frs-banking/main/default/objects/Transfer_Completed__e/fields/Amount_Minor__c.field-meta.xml
<CustomField>
    <fullName>Amount_Minor__c</fullName>
    <label>Amount (Minor Units)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>