frs-banking/main/default/objects/Transfer_Completed__e/fields/Transfer_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Record_Id__c</fullName>
    <label>Transfer Record Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>